--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,7 +31,7 @@
 			"label": "Local - Ensure Dapr",
 			"detail": "Ensures that the Dapr binaries are installed and Dapr is configured for local execution.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/local/ensure-dapr.sh",
+			"command": "velocitas exec runtime-local ensure-dapr",
 			"group": "none",
 			"presentation": {
 				"close": true
@@ -41,7 +41,7 @@
 			"label": "Local - Mosquitto",
 			"detail": "Runs Mosquitto MQTT Broker in a container (with docker run) with exposed port 1883.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/local/run-mosquitto.sh",
+			"command": "velocitas exec runtime-local run-mosquitto",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -68,7 +68,7 @@
 			"label": "Local - VehicleDataBroker",
 			"detail": "Runs the VehicleDataBroker as background task.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/local/run-vehicledatabroker.sh",
+			"command": "velocitas exec runtime-local run-vehicledatabroker",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -95,7 +95,7 @@
 			"label": "Local - VehicleDataBroker CLI",
 			"detail": "Starts the VehicleDataBroker CLI",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/local/run-vehicledatabroker-cli.sh",
+			"command": "velocitas exec runtime-local run-vehicledatabroker-cli",
 			"group": "none",
 			"isBackground": false,
 		},
@@ -111,7 +111,7 @@
 			"label": "Local - VehicleServices",
 			"detail": "Runs all configured VehicleServices as background task.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/local/run-vehicleservices.sh",
+			"command": "velocitas exec runtime-local run-vehicleservices",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -138,7 +138,7 @@
 			"label": "Local - FeederCan",
 			"detail": "Runs FeederCan as background task.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/local/run-feedercan.sh",
+			"command": "velocitas exec runtime-local run-feedercan",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -208,7 +208,7 @@
 			"label": "K3D - Configure control plane",
 			"detail": "Creates a local container registry used by K3D as well as an K3D cluster with Dapr enabled.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/k3d/configure_controlplane.sh",
+			"command": "velocitas exec runtime-k3d configure_controlplane",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -221,7 +221,7 @@
 			"label": "K3D - Deploy runtime",
 			"detail": "Deploys the runtime components (like Vehicle Data Broker, Seat Service, ...) within the K3D cluster.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/k3d/deploy_runtime.sh",
+			"command": "velocitas exec runtime-k3d deploy_runtime",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -237,7 +237,7 @@
 			"label": "K3D - Build VehicleApp",
 			"detail": "Builds the VehicleApp and pushes it to the local K3D registry.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/k3d/build_vehicleapp.sh",
+			"command": "velocitas exec deployment-k3d build_vehicleapp",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -250,7 +250,7 @@
 			"label": "K3D - Deploy VehicleApp",
 			"detail": "Builds and deploys the VehicleApp via Helm to the K3D cluster.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/k3d/deploy_vehicleapp.sh",
+			"command": "velocitas exec deployment-k3d deploy_vehicleapp",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -267,7 +267,7 @@
 			"label": "K3D - Deploy VehicleApp (without rebuild)",
 			"detail": "Deploys the VehicleApp via Helm to the K3D cluster (without rebuilding it)",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/k3d/deploy_vehicleapp.sh",
+			"command": "velocitas exec deployment-k3d deploy_vehicleapp",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -283,7 +283,7 @@
 			"label": "K3D - Uninstall runtime",
 			"detail": "Uninstalls the runtime components from the K3D cluster (without deleting the cluster).",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/k3d/uninstall_runtime.sh",
+			"command": "velocitas exec runtime-k3d uninstall_runtime",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -299,7 +299,7 @@
 			"label": "K3D - Reset control plane",
 			"detail": "Deletes the K3D cluster with all deployed pods/services.",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/k3d/reset_controlplane.sh",
+			"command": "velocitas exec runtime-k3d reset_controlplane",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
@@ -312,7 +312,7 @@
 			"label": "Import example app from SDK",
 			"detail": "Import example app from SDK",
 			"type": "shell",
-			"command": "./.vscode/scripts/runtime/utils/import-example-app.sh ${input:exampleApp}",
+			"command": "./.vscode/scripts/import-example-app.sh ${input:exampleApp}",
 		}
 	],
 	"inputs": [
