--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,16 @@ jobs:
           pip install -r app/tests/requirements-tests.txt
 
       - name: Run Linters
-        uses: ./.github/actions/pre-commit-action
+        # uses: ./.github/actions/pre-commit-action
+        # uses: actions/cache@v3
+        # with:
+        #   path: ~/.cache/pre-commit
+        #   key: pre-commit-3|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
+        run: |
+          python -m pip install pre-commit
+          python -m pip freeze --local
+          pre-commit run --show-diff-on-failure --color=always ${{ inputs.extra_args }}
+    
 
       - name: Clone Release Documentation Action repository
         uses: actions/checkout@v3
