--- a/.github/workflows/check-devcontainer.yml
+++ b/.github/workflows/check-devcontainer.yml
@@ -49,3 +49,11 @@ jobs:
           name: logs
           path: ./logs
           retention-days: 1
+
+      - name: Upload logs packages
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: packages
+          path: ~/.velocitas/packages
+          retention-days: 1
