--- a/.github/workflows/check-devcontainer.yml
+++ b/.github/workflows/check-devcontainer.yml
@@ -54,6 +54,30 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: packages
-          path: ~/.velocitas/packages
+          name: packages1
+          path: $HOME/.velocitas/packages/
+          retention-days: 1
+
+      - name: Upload logs packages
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: packages2
+          path: '~/.velocitas/packages/'
+          retention-days: 1
+
+      - name: Upload logs packages
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: packages3
+          path: '~/.velocitas/packages/'
+          retention-days: 1
+
+      - name: Upload logs packages
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: packages4
+          path: '/home/vscode/.velocitas/packages'
           retention-days: 1
