--- a/.github/workflows/check-devcontainer.yml
+++ b/.github/workflows/check-devcontainer.yml
@@ -55,29 +55,5 @@ jobs:
         if: always()
         with:
           name: packages1
-          path: $HOME/.velocitas/packages/
-          retention-days: 1
-
-      - name: Upload logs packages
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: packages2
-          path: '~/.velocitas/packages/'
-          retention-days: 1
-
-      - name: Upload logs packages
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: packages3
-          path: '~/.velocitas/packages/'
-          retention-days: 1
-
-      - name: Upload logs packages
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: packages4
-          path: '/home/vscode/.velocitas/packages'
+          path: /home/vscode/.velocitas/packages/
           retention-days: 1
